--- a/build.gradle
+++ b/build.gradle
@@ -7,9 +7,9 @@
  */
 
 // Apply the java-library plugin to add support for Java Library
-//apply plugin: 'java-library'
+//apply plugin : 'eclipse'
 apply plugin: 'application'
-mainClassName = 'gdemo.Test'
+mainClassName = 'start.Start'
 
 // In this section you declare where to find the dependencies of your project
 repositories {
@@ -21,7 +21,16 @@ repositories {
 dependencies {
     // This dependency is exported to consumers, that is to say found on their compile classpath.
     //api 'org.apache.commons:commons-math3:3.6.1'
-
+    
+    // https://mvnrepository.com/artifact/fr.inria.gforge.spoon/spoon-core
+	//compile group: 'fr.inria.gforge.spoon', name: 'spoon-core', version: '7.3.0'
+	//compile group: 'fr.inria.gforge.spoon', name: 'spoon-decompiler', version: '0.1.0'
+	
+	// https://mvnrepository.com/artifact/com.ibm.wala/com.ibm.wala.core
+	compile group: 'com.ibm.wala', name: 'com.ibm.wala.core', version: '1.3.8'	  
+	// https://mvnrepository.com/artifact/org.yaml/snakeyaml
+	compile group: 'org.yaml', name: 'snakeyaml', version: '1.24'
+	
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
     //implementation 'com.google.guava:guava:23.0'
 
