--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,9 @@ dependencies {
 	//compile group: 'fr.inria.gforge.spoon', name: 'spoon-decompiler', version: '0.1.0'
 	
 	// https://mvnrepository.com/artifact/com.ibm.wala/com.ibm.wala.core
-	compile group: 'com.ibm.wala', name: 'com.ibm.wala.core', version: '1.3.8'	  
+	compile group: 'com.ibm.wala', name: 'com.ibm.wala.core', version: '1.4.3'	  
+	// https://mvnrepository.com/artifact/com.ibm.wala/com.ibm.wala.util
+	compile group: 'com.ibm.wala', name: 'com.ibm.wala.util', version: '1.4.3'	
 	// https://mvnrepository.com/artifact/org.yaml/snakeyaml
 	compile group: 'org.yaml', name: 'snakeyaml', version: '1.24'
 	
