--- a/.project
+++ b/.project
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>DTscheduler</name>
-	<comment></comment>
+	<name>DTChecker</name>
+	<comment>Project DTChecker created by Buildship.</comment>
 	<projects>
 	</projects>
 	<buildSpec>
