--- a/src/main/resources/config.yaml
+++ b/src/main/resources/config.yaml
@@ -9,12 +9,19 @@ tools:
 target_list:
     test1: 
        pkgDir: testTarget/sample1
-#       pkgDir: testTarget/hb-3483
        scope_file: 
        io_files: testTarget/io/io.txt
        specific_io_files: testTarget/io/io_specific.txt
-       timer_out: tmp.timer
-       rst_out: tmp.log
+       timer_out_path: testTarget/sample1/tmp.timer
+       rst_out_path: tmp.log
+#    hb-3483: 
+#       pkgDir: testTarget/hb-3483
+#       scope_file: 
+#       io_files: testTarget/io/io.txt
+#       specific_io_files: testTarget/io/io_specific.txt
+#       timer_out_path: testTarget/sample1/tmp.timer
+#       rst_out_path: tmp.log
+    
        
 # Ouput detail info about the following function
 test_list:
